@startuml DataTableClassDiagram

title DataTable - Class Diagram

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam packageStyle rectangle

package "ChrisDev\\UxComponents\\Twig\\Components" {
    class DataTable <<LiveComponent>> {
        +string title
        +string id
        +array columns
        +array rows
        +mixed source
        +array actions
        +array filters
        +int perPage
        +array emptyState
        +array filterValues
        -DataTableResult? result
        +getColumns(): array
        +getVisibleRows(): array
        +getResult(): DataTableResult
        +getTotalItems(): int
        +getCurrentPage(): int
        +getPerPage(): int
        +getTotalPages(): int
        +getPaginationPages(): array
        +getPreviousPageUrl(): string?
        +getNextPageUrl(): string?
        +getPageUrl(page: int): string
        +getActions(): array
        +getVisibleFilters(): array
        +getSortUrl(column: array): string
        +getDirectionForColumn(column: array): string
        +getSortIcon(column: array): string
        +getActionClasses(action: array): string
        +getFilterClasses(filter: array): string
        +getFilterInputName(filter: array): string
        +getEmptyState(): array
        +getActionUrl(action: array, row: array): string
        +getCellValue(row: array, key: string): string
        -createState(filterValues: array?, sort: string?, paginate: bool): DataTableState
        -fetchRows(state: DataTableState): DataTableResult
    }
}

package "ChrisDev\\UxComponents\\DataTable" {
    class DataTableState <<readonly>> {
        +array columns
        +array filters
        +array filterValues
        +string sort
        +string direction
        +int page
        +int perPage
        +bool paginate
        +getDirection(): string
        +isSortableColumn(key: string): bool
        +getFilterValue(name: string): string
        +getPage(): int
        +getPerPage(): int
    }

    class DataTableResult <<readonly>> {
        +array rows
        +int totalItems
        +int currentPage
        +int perPage
        +int totalPages
    }
}

package "ChrisDev\\UxComponents\\DataTable\\DataSource" {
    interface DataSourceInterface <<AutoconfigureTag>> {
        +supports(source: mixed): bool
        +fetch(source: mixed, state: DataTableState): DataTableResult
    }

    class DataSourceResolver <<readonly>> {
        -iterable dataSources
        +resolve(source: mixed): DataSourceInterface
    }

    class ArrayDataSource {
        +supports(source: mixed): bool
        +fetch(source: mixed, state: DataTableState): DataTableResult
        -normalizeRows(source: array): array
        -applyFilters(rows: array, state: DataTableState): array
        -applySorting(rows: array, state: DataTableState): array
        -getTotalPages(totalItems: int, perPage: int): int
    }

    class DoctrineDataSource <<readonly>> {
        -ManagerRegistry managerRegistry
        +supports(source: mixed): bool
        +fetch(source: mixed, state: DataTableState): DataTableResult
        -createBaseQueryBuilder(entityManager: EntityManagerInterface, source: string, state: DataTableState, metadata: ClassMetadata): QueryBuilder
        -countItems(entityManager: EntityManagerInterface, source: string, state: DataTableState, metadata: ClassMetadata): int
        -assertColumnsCanBeMapped(entityClass: string, state: DataTableState, metadata: ClassMetadata): void
        -normalizeEntity(entity: object, metadata: ClassMetadata): array
        -readProperty(entity: object, fieldName: string): mixed
    }
}

package "Symfony" {
    class RequestStack <<external>>
    interface UrlGeneratorInterface <<external>>
}

package "Doctrine" {
    interface ManagerRegistry <<external>>
    interface EntityManagerInterface <<external>>
    class ClassMetadata <<external>>
    class QueryBuilder <<external>>
}

DataTable *-- "0..1 cached" DataTableResult
DataTable ..> DataTableState : creates
DataTable --> DataSourceResolver : resolves source
DataTable --> RequestStack
DataTable --> UrlGeneratorInterface

DataSourceResolver o-- "many" DataSourceInterface
DataSourceResolver ..> DataSourceInterface : returns

DataSourceInterface ..> DataTableState
DataSourceInterface ..> DataTableResult

ArrayDataSource ..|> DataSourceInterface
ArrayDataSource ..> DataTableState
ArrayDataSource ..> DataTableResult

DoctrineDataSource ..|> DataSourceInterface
DoctrineDataSource --> ManagerRegistry
DoctrineDataSource ..> EntityManagerInterface
DoctrineDataSource ..> ClassMetadata
DoctrineDataSource ..> QueryBuilder
DoctrineDataSource ..> DataTableState
DoctrineDataSource ..> DataTableResult

note right of DataTable
Uses rows when source is null.
Otherwise delegates the provided source to DataSourceResolver.
end note

note bottom of DataSourceInterface
Tagged with chrisdev_ux_components.data_table_data_source.
end note

@enduml
